# mypy-but-why

./: README.md  devbox.json  presentation.md  pyproject.toml
src/: 1.py  2.py  3.py  4.py
